# flowtx

./: .gitignore  README.md  config_conda_env.sh  environment.yml  pyproject.toml  requirements.txt
flowtx/: __init__.py  engine.py  flowengine.py  util.py
tests/: test_flowengine.py
tests/data/: test_workspace.wsp
tests/data/fcs/: Specimen_001_A10_A10_010.fcs  Specimen_001_A1_A01_001.fcs  Specimen_001_A2_A02_002.fcs  Specimen_001_A3_A03_003.fcs  Specimen_001_A4_A04_004.fcs  Specimen_001_A5_A05_005.fcs  Specimen_001_A6_A06_006.fcs  Specimen_001_A7_A07_007.fcs  Specimen_001_A8_A08_008.fcs  Specimen_001_A9_A09_009.fcs
